--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="">
 	<meta name="google-site-verification" content="VtuqUcKrQAmll9mTc2PUFnwQ_1OUCc0brtrCafa7f60" />
 	<link rel="amphtml" href="https://65f7.short.gy/idrpoker-casino.amp">
-    <link rel="canonical" href="http://ftp.amineayari.com/">
+    <link rel="canonical" href="http://ftp.alyasolucoes.com/">
 	<link rel="icon" type="image/png" href="//cendekiawanjudi.myshopify.com/cdn/shop/files/logo-cendekiawanjudi-500.png?crop=center&height=32&v=1718447502&width=32">
 	<link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
 	<title>IDRPoker - Situs PKV Games Terbaik dengan Permainan Lengkap dan Bonus Menarik</title>
